--- a/0x00-Webpack/task_2/public/index.html
+++ b/0x00-Webpack/task_2/public/index.html
@@ -6,6 +6,6 @@
     <title>Holberton</title>
   </head>
   <body>
-    <script src="./bundle.js"></script>
+    <script type="text/javascript" src="./bundle.js"></script>
   </body>
 </html>
